--- a/estilos/style.css
+++ b/estilos/style.css
@@ -165,7 +165,7 @@ aside {
     background-color: var(--cor1);
     border-radius: 10px;
     padding: 20px;
-    margin: 30px;
+    margin: 30px 0px;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.277);
 }
 
